--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
 	],
 	"license"     : "CC-BY-NC-4.0",
 	"require"     : {
-		"php"             : ">=7.1.0",
 		"busyphp/busyphp" : "^6.0"
 	},
 	"require-dev" : {
@@ -22,9 +21,12 @@
 		}
 	},
 	"extra"       : {
+		"branch-alias" : {
+			"dev-master" : "2.0.x-dev"
+		},
 		"busyphp" : {
 			"config" : {
-				"wechat" : "src/config.php"
+				"busy-wechat" : "src/config.php"
 			}
 		}
 	},
