--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 		"branch-alias" : {
 			"dev-master" : "2.0.x-dev"
 		},
-		"busyphp" : {
+		"think"        : {
 			"config" : {
 				"busy-wechat" : "src/config.php"
 			}
